# readObj

./: CMakeLists.txt  main.cpp
